@@ -445,11 +445,11 @@ public class ProviderCommunication extends AbstractModel<Integer> implements Per
     }
     
     public void pcCopyKeyFieldsFromObjectId(final FieldConsumer fieldConsumer, final Object o) {
-        fieldConsumer.storeObjectField(4 + ProviderCommunication.pcInheritedFieldCount, (Object)new Integer(((IntId)o).getId()));
+        fieldConsumer.storeObjectField(4 + ProviderCommunication.pcInheritedFieldCount, (Object)Integer.valueOf(((IntId)o).getId()));
     }
     
     public void pcCopyKeyFieldsFromObjectId(final Object o) {
-        this.id = new Integer(((IntId)o).getId());
+        this.id = Integer.valueOf(((IntId)o).getId());
     }
     
     public Object pcNewObjectIdInstance(final Object o) {
